enterprise/plugins/hubble-flow-policy-metadata/examples/kubernetes/tiefighter-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tiefighter-egress-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      org: empire
      class: tiefighter
  policyTypes:
  - Egress
  egress:
  - {}
